# austria-job-scout

./: .gitignore  AUDIT_REPORT_2026-06-23.md  README.md  deps.yaml  pyproject.toml  requirements.txt
.planning/: 01-1-PLAN.md  AUDIT-2026-06-22.md  PONYTAIL-2026-06-23.md  PROJECT.md  SESSION-2026-06-23.md  STATE.md
austria_job_scout/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  db.py  schema.sql  seeds.py
austria_job_scout/extractors/: __init__.py  aggregator_extractor.py  ats_extractor.py  career_page_extractor.py
austria_job_scout/modules/: __init__.py  de_en_synonyms.py  extractor.py  fetcher.py  indexer.py  ingest.py  kmu_wien_discovery.py  pipeline.py  reporter.py  rss_discovery.py  similarity.py  target_discovery.py
austria_job_scout/probes/: __init__.py  aggregator_search.py  ats_classifier.py  career_paths.py  language.py
docs/: ponytail-audit-2026-06-30.md
live_results/: README.md  similar_jobs_report.csv  similar_jobs_report.json  similar_jobs_report.md
research/: AUSTRIA_JOB_LANDSCAPE.md  INVENTORY.md  PITFALLS.md
tests/: conftest.py  test_aggregator_search.py  test_ats_classifier.py  test_benchmark.py  test_career_page_extractor.py  test_cli.py  test_content_dedup.py  test_db.py  test_de_en_synonyms.py  test_extract_index_score.py  test_extractors_json.py  test_fetcher.py  test_indexer.py  test_ingest.py  test_kmu_wien_discovery.py  test_pipeline_e2e.py  test_rss_discovery.py  test_target_discovery.py  test_wishlist_persistence.py
